--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -83,6 +83,7 @@
             </div>
       </div>
     </div>
+      <%= link_to 'Télécharger PDF', dashboard_pdf_path(format: :pdf), class: 'btn btn-primary', target: '_blank' %>
     </div>
   </div>
 </div>
